--- a/app/src/main/res/layout/list_daily.xml
+++ b/app/src/main/res/layout/list_daily.xml
@@ -12,6 +12,8 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="20dp"
         android:orientation="horizontal"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         >
 
         <TextView
