--- a/app/src/main/res/layout/list_weeklyview.xml
+++ b/app/src/main/res/layout/list_weeklyview.xml
@@ -3,8 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp"
     >
 
     <LinearLayout
@@ -13,7 +11,9 @@
         android:layout_weight="1"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="20dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp">
 
         <TextView
             android:id="@+id/dato"
@@ -21,6 +21,9 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="Dato"
+
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             android:textSize="18sp" />
 
         <TextView
@@ -29,6 +32,10 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="Antal ml"
+
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+
             android:textSize="18sp" />
 
 
