--- a/app/src/main/res/layout/quick_add_widget_4col.xml
+++ b/app/src/main/res/layout/quick_add_widget_4col.xml
@@ -28,7 +28,7 @@
             android:id="@+id/widget_refresh_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
+            android:layout_gravity="end|center"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_refresh_black_24dp" />
 
